tried to add fixed navbar:Stretch Goals

--- a/css/index.css
+++ b/css/index.css
@@ -134,7 +134,7 @@ html {
 }
 html,
 body {
-  font-family: 'Ubuntu', sans-serif;
+  font-family: "Ubuntu", sans-serif;
   color: #5e6164;
 }
 h1,
@@ -142,7 +142,7 @@ h2,
 h3,
 h4,
 h5 {
-  font-family: 'Russo One', sans-serif;
+  font-family: "Russo One", sans-serif;
   color: #23293b;
 }
 h2 {
@@ -158,22 +158,24 @@ p {
 .container {
   max-width: 800px;
   width: 100%;
-  margin: 0 auto;
+  margin: 11rem auto;
 }
 .nav-bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 10rem;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  margin: 3rem 0 0 0;
-}
-@media (max-width: 500px) {
-  .nav-bar {
-    margin: 2rem 0 0 0;
-  }
+  background: #f6f7f8;
+  opacity: 0.9;
 }
 .nav-bar h1 {
   font-size: 5rem;
+  margin-top: 1rem;
   margin-bottom: 1.5rem;
 }
 @media (max-width: 500px) {
@@ -191,10 +193,14 @@ p {
   text-decoration: none;
   font-size: 1.5rem;
 }
+.nav-bar nav a:hover {
+  text-decoration: underline;
+  color: #23293b;
+}
 @media (max-width: 500px) {
   .nav-bar nav a {
     margin: 1rem 1.5rem;
-    font-size: 1.5rem;
+    font-size: 1.4rem;
   }
 }
 footer {
