--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,15 +1,21 @@
 // Navigation code here
 .nav-bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 10rem;
   .centering();
   flex-direction: column;
-  margin: 3rem 0 0 0;
+  background: @porcelain;
+  opacity: 0.9;
 
   @media @mobile {
-    margin: 2rem 0 0 0;
   }
 
   h1 {
     font-size: 5rem;
+    margin-top: 1rem;
     margin-bottom: 1.5rem;
 
     @media @mobile {
@@ -27,9 +33,14 @@
       text-decoration: none;
       font-size: 1.5rem;
 
+      &:hover {
+        text-decoration: underline;
+        color: @header-font-color;
+      }
+
       @media @mobile {
         margin: 1rem 1.5rem;
-        font-size: 1.5rem;
+        font-size: 1.4rem;
       }
     }
   }
